# rust-chat-server

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_create_users.sql  002_create_rooms.sql  003_create_room_members.sql  004_create_messages.sql  005_create_direct_messages.sql
src/: config.rs  error.rs  logging.rs  main.rs
src/db/: mod.rs  posgresql.rs  redisdb.rs
src/handlers/: auth.rs
src/middleware/: auth.rs
src/models/: message.rs  mod.rs  room.rs  session.rs  user.rs
src/repositories/: message_repo.rs  mod.rs  room_repo.rs  user_repo.rs
src/service/: auth_service.rs
src/services/: auth_service.rs  message_service.rs  mod.rs  room_service.rs
src/utils/: jwt.rs  password.rs
src/websocket/: connection.rs  hub.rs  mod.rs  protocol.rs
